# FLAC-ALSA-Player

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  STATUS.md  TASK_MODEL_MAP.md  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PCMBuffer.cpp  UsbAudioEngine.cpp
app/src/main/java/dev/anosh/musicplayer/audio/: AudioFileLoader.kt  AudioSelection.kt  DecodedAudioFile.kt  NativePcmRingBuffer.kt  PcmBufferController.kt  PlaybackController.kt  PlaylistEntry.kt  PlaylistScanner.kt  WavFile.kt  WavParser.kt
app/src/main/java/dev/anosh/musicplayer/root/: RootAudioDaemonClient.kt
app/src/main/java/dev/anosh/musicplayer/storage/: PlaylistStorage.kt
app/src/main/java/dev/anosh/musicplayer/ui/: AudioVisualizerView.kt  FrequencyResponseView.kt  LibraryActivity.kt  LibrarySessionStore.kt  (+2 more)
app/src/main/res/drawable/: bg_artwork.xml  bg_button_primary.xml  bg_button_secondary.xml  bg_panel.xml  bg_player_root.xml  bg_transport_button.xml  bg_transport_button_primary.xml  ic_launcher_foreground.xml  ic_music_placeholder.xml  ic_next.xml  ic_pause.xml  ic_play.xml  ic_previous.xml
app/src/main/res/layout/: activity_library.xml  activity_player.xml  item_track.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
root-daemon/: CMakeLists.txt  README.md  push_root_daemon.sh
root-daemon/include/: root_audio_protocol.h  tinyalsa_shim.h
root-daemon/src/: root_audio_daemon.cpp  tinyalsa_shim.cpp
(+7 files in other folders)
